--- a/src/modern/sass/src/view/main/Main.scss
+++ b/src/modern/sass/src/view/main/Main.scss
@@ -1,5 +1,19 @@
-.basigx-map-tools {
-    top: 20px;
-    position: absolute;
-    border: 5px solid red;
+.ol-control {
+}
+
+.ol-scale-line {
+    margin: 5px;
+    bottom: 0px;
+    right: 0px;
+    left: initial;
+}
+
+.ol-attribution.ol-uncollapsible {
+    margin: 5px;
+    height: initial;
+    text-align: left;
+    bottom: 0px;
+    left: 0px;
+    max-width: 50%;
+    max-height: 60px;
 }
