Fixed searchfield scrolling.

--- a/src/modern/sass/src/view/main/Main.scss
+++ b/src/modern/sass/src/view/main/Main.scss
@@ -21,3 +21,11 @@
 .add-wms-form-inner {
     width: 100% !important;
 }
+
+.koala-list-item {
+    color: black;
+    padding: 5px;
+    border-color: lightgrey;
+    border-style: solid;
+    border-width: 1px 0px 0px 0px;
+}
