--- a/src/modern/sass/src/view/main/Main.scss
+++ b/src/modern/sass/src/view/main/Main.scss
@@ -6,6 +6,13 @@
     bottom: 0px;
     right: 0px;
     left: initial;
+    background: rgba(255,255,255,.8);
+}
+
+.ol-scale-line-inner {
+    border: 1px solid #666;
+    border-top: none;
+    color: #666;
 }
 
 .ol-attribution.ol-uncollapsible {
@@ -16,6 +23,11 @@
     left: 0px;
     max-width: 50%;
     max-height: 60px;
+    border-radius: 4px;
+}
+
+.ol-attribution.ol-uncollapsible a:link, a:visited {
+    color: #666;
 }
 
 .add-wms-form-inner {
