Help cursor using CSS not JS

--- a/src/classic/sass/src/view/component/D3Chart.scss
+++ b/src/classic/sass/src/view/component/D3Chart.scss
@@ -1,6 +1,10 @@
 svg .k-d3-shape-group-legend g {
     cursor: pointer;
 }
+svg .k-d3-shape-group rect,
+svg .k-d3-shape-group circle {
+    cursor: help;
+}
 
 svg .k-d3-shape-group,
 svg .k-d3-shape-group-legend circle,
