Make series deletable

--- a/src/classic/sass/src/view/component/D3Chart.scss
+++ b/src/classic/sass/src/view/component/D3Chart.scss
@@ -46,3 +46,7 @@ svg .k-d3-shape-group-legend .k-d3-shape-group-legend-hidden path,
 svg .k-d3-shape-group-legend .k-d3-shape-group-legend-hidden text {
     opacity: 0.3;
 }
+svg .k-d3-shape-group-legend .k-d3-delete-icon {
+    fill: red;
+    font-size: 17px;
+}
