Use red layer icon in case of load error

--- a/src/classic/sass/src/view/panel/RoutingLegendTree.scss
+++ b/src/classic/sass/src/view/panel/RoutingLegendTree.scss
@@ -9,3 +9,6 @@
     opacity: 0.8;
     padding-left: 21px;
 }
+.basigx-legend-panel  .k-loading-failed .x-tree-icon-leaf {
+    background-image: url('../classic/resources/img/leaf-errored.png');
+}
