--- a/src/classic/sass/src/view/component/D3Chart.scss
+++ b/src/classic/sass/src/view/component/D3Chart.scss
@@ -71,3 +71,11 @@ svg .k-d3-grid line {
 svg .k-d3-grid path {
   stroke-width: 0;
 }
+
+.k-d3-scrollable-legend-container {
+    position: absolute;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    top: 0;
+    /* other properties set dynamically */
+}
