First version of D3 charts in the modern client.

--- a/src/modern/sass/src/view/component/D3Chart.scss
+++ b/src/modern/sass/src/view/component/D3Chart.scss
@@ -1,5 +1,5 @@
 /*
- * This file also lives in the modern namespace. I wasn't able to figure out
+ * This file also lives in the classic namespace. I wasn't able to figure out
  * how and where to add the rules below so they can be shared for builds.
  */
 svg .k-d3-shape-group-legend g {
