--- a/src/modern/sass/src/view/panel/MobileLegend.scss
+++ b/src/modern/sass/src/view/panel/MobileLegend.scss
@@ -1,3 +1,11 @@
 .k-panel-mobilelegend .x-treelist-item-text {
     margin-left: 0 !important;
 }
+
+.k-active-charting-layer {
+    color: #157fcc;
+}
+
+.k-inactive-charting-layer {
+    color: #808080;
+}
