Basic hover highlighting of circles in timeseries charts

--- a/src/classic/sass/src/view/component/D3Chart.scss
+++ b/src/classic/sass/src/view/component/D3Chart.scss
@@ -10,6 +10,11 @@ svg .k-d3-shape-group circle {
     cursor: help;
 }
 
+svg .k-d3-shape-group circle:hover {
+    fill: #FF7700 !important;
+    stroke: #FF7700 !important;
+}
+
 svg .k-d3-shape-group,
 svg .k-d3-shape-group-legend circle,
 svg .k-d3-shape-group-legend path,
