--- a/src/modern/sass/src/view/component/D3Chart.scss
+++ b/src/modern/sass/src/view/component/D3Chart.scss
@@ -53,6 +53,7 @@ svg .k-d3-shape-group-legend .k-d3-shape-group-legend-hidden text {
 svg .k-d3-shape-group-legend .k-d3-delete-icon {
     fill: red;
     font-size: 17px;
+    font-family: FontAwesome;
 }
 svg text {
   -webkit-touch-callout: none; /* iOS Safari */
