--- a/src/classic/sass/src/view/component/D3Chart.scss
+++ b/src/classic/sass/src/view/component/D3Chart.scss
@@ -74,7 +74,7 @@ svg .k-d3-shape-group-legend .k-d3-shape-group-legend-hidden text {
     opacity: 0.3;
 }
 svg .k-d3-shape-group-legend .k-d3-delete-icon {
-    fill: red;
+    fill: $button-default-background-color;
     font-size: 17px;
     font-family: FontAwesome;
 }
