some minor gui changes / reduce size of headers and logo

--- a/src/classic/sass/src/view/component/D3Chart.scss
+++ b/src/classic/sass/src/view/component/D3Chart.scss
@@ -107,3 +107,9 @@ svg .k-d3-grid path {
     top: 0;
     /* other properties set dynamically */
 }
+
+
+
+.k-window-barchart .x-window-header-default-top {
+    padding: 0px 0px 0px 0px;
+}
