--- a/src/classic/sass/src/view/window/TimeSeriesWindow.scss
+++ b/src/classic/sass/src/view/window/TimeSeriesWindow.scss
@@ -14,3 +14,9 @@
     border-radius: 5px;
     border: 1px solid transparent;
 }
+.k-window-timeserieswindow .x-window-header-default-top {
+    padding: 0px 0px 0px 0px;
+}
+.k-window-timeserieswindow .x-panel-header-default-horizontal.x-header-noborder {
+    padding: 0px 0px 0px 0px;
+}
