Make the remove button blue again

--- a/src/modern/sass/src/view/component/D3Chart.scss
+++ b/src/modern/sass/src/view/component/D3Chart.scss
@@ -51,7 +51,7 @@ svg .k-d3-shape-group-legend .k-d3-shape-group-legend-hidden text {
     opacity: 0.3;
 }
 svg .k-d3-shape-group-legend .k-d3-delete-icon {
-    fill: red;
+    fill: #3892d4;
     font-size: 17px;
     font-family: FontAwesome;
 }
