Adds sorting buttons to the mobile legend tree.

--- a/src/modern/sass/src/view/panel/MobileLegend.scss
+++ b/src/modern/sass/src/view/panel/MobileLegend.scss
@@ -9,3 +9,14 @@
 .k-inactive-charting-layer {
     color: #808080;
 }
+
+.tree-item-order-icons {
+
+  .up-icon {
+    padding-right: 5px;
+  }
+
+  .remove-icon{
+    float: right;
+  }
+}
