--- a/src/modern/sass/src/view/panel/MobileLegend.scss
+++ b/src/modern/sass/src/view/panel/MobileLegend.scss
@@ -10,13 +10,88 @@
     color: #808080;
 }
 
+
 .tree-item-order-icons {
+    font-size: 21px;
 
-  .up-icon {
-    padding-right: 5px;
-  }
+    .up-icon, .down-icon {
+        padding-right: 5px;
+    }
 
-  .remove-icon{
-    float: right;
-  }
+    .remove-icon{
+        float: right;
+    }
+
+    /* Special styling for slider */
+    input[type=range] {
+        -webkit-appearance: none;
+        height: 20px;
+    }
+    input[type=range]:focus {
+        outline: none;
+    }
+    input[type=range]::-webkit-slider-runnable-track {
+        height: 4px;
+        cursor: pointer;
+        background: #ddd;
+        border-radius: 2px;
+    }
+    input[type=range]::-webkit-slider-thumb {
+        height: 20px;
+        width: 20px;
+        border-radius: 10px;
+        margin-top: -8px;
+        background: #157fcc;
+        border: 2px solid #666;
+        cursor: pointer;
+        -webkit-appearance: none;
+    }
+    input[type=range]:focus::-webkit-slider-runnable-track {
+        background: #ddd;
+    }
+    input[type=range]::-moz-range-track {
+        height: 4px;
+        cursor: pointer;
+        background: #ddd;
+        border-radius: 1.3px;
+    }
+    input[type=range]::-moz-range-thumb {
+        height: 20px;
+        width: 20px;
+        border-radius: 10px;
+        margin-top: -8px;
+        background: #157fcc;
+        border: 2px solid #666;
+        cursor: pointer;
+    }
+    input[type=range]::-ms-track {
+        height: 4px;
+        cursor: pointer;
+        background: #ddd;
+        border-radius: 1.3px;
+    }
+    input[type=range]::-ms-fill-lower {
+        background: #ddd;
+        border-radius: 2.6px;
+    }
+    input[type=range]::-ms-fill-upper {
+        background: #ddd;
+        border-radius: 2.6px;
+    }
+    input[type=range]::-ms-thumb {
+        height: 20px;
+        width: 20px;
+        border-radius: 10px;
+        margin-top: -8px;
+        background: #157fcc;
+        border: 2px solid #666;
+        cursor: pointer;
+    }
+    input[type=range]:focus::-ms-fill-lower {
+        background: #ddd;
+    }
+    input[type=range]:focus::-ms-fill-upper {
+        background: #ddd;
+    }
+
 }
