Add transparent background to slider.

--- a/src/modern/sass/src/view/panel/MobileLegend.scss
+++ b/src/modern/sass/src/view/panel/MobileLegend.scss
@@ -26,6 +26,7 @@
     input[type=range] {
         -webkit-appearance: none;
         height: 20px;
+        background: rgba(0,0,0,0);
     }
     input[type=range]:focus {
         outline: none;
