--- a/src/modern/sass/src/view/panel/MobileLegend.scss
+++ b/src/modern/sass/src/view/panel/MobileLegend.scss
@@ -3,7 +3,7 @@
 }
 
 .k-active-charting-layer {
-    color: #157fcc;
+    color: $base-color;
 }
 
 .k-inactive-charting-layer {
@@ -33,8 +33,7 @@
     }
     input[type=range]::-webkit-slider-runnable-track {
         height: 4px;
-        cursor: pointer;
-        background: #ddd;
+        background: $neutral-color;
         border-radius: 2px;
     }
     input[type=range]::-webkit-slider-thumb {
@@ -42,18 +41,16 @@
         width: 20px;
         border-radius: 10px;
         margin-top: -8px;
-        background: #157fcc;
-        border: 2px solid #666;
-        cursor: pointer;
+        background: $base-color;
+        border: 2px solid darken($neutral-color, 60%);
         -webkit-appearance: none;
     }
     input[type=range]:focus::-webkit-slider-runnable-track {
-        background: #ddd;
+        background: $neutral-color;
     }
     input[type=range]::-moz-range-track {
         height: 4px;
-        cursor: pointer;
-        background: #ddd;
+        background: $neutral-color;
         border-radius: 1.3px;
     }
     input[type=range]::-moz-range-thumb {
@@ -61,22 +58,20 @@
         width: 20px;
         border-radius: 10px;
         margin-top: -8px;
-        background: #157fcc;
-        border: 2px solid #666;
-        cursor: pointer;
+        background: $base-color;
+        border: 2px solid $neutral-color;
     }
     input[type=range]::-ms-track {
         height: 4px;
-        cursor: pointer;
-        background: #ddd;
+        background: $neutral-color;
         border-radius: 1.3px;
     }
     input[type=range]::-ms-fill-lower {
-        background: #ddd;
+        background: $neutral-color;
         border-radius: 2.6px;
     }
     input[type=range]::-ms-fill-upper {
-        background: #ddd;
+        background: $neutral-color;
         border-radius: 2.6px;
     }
     input[type=range]::-ms-thumb {
@@ -84,15 +79,14 @@
         width: 20px;
         border-radius: 10px;
         margin-top: -8px;
-        background: #157fcc;
-        border: 2px solid #666;
-        cursor: pointer;
+        background: $base-color;
+        border: 2px solid darken($neutral-color, 60%);
     }
     input[type=range]:focus::-ms-fill-lower {
-        background: #ddd;
+        background: $neutral-color;
     }
     input[type=range]:focus::-ms-fill-upper {
-        background: #ddd;
+        background: $neutral-color;
     }
 
 }
