Wrap layertitle in legend tree.

--- a/src/classic/sass/src/view/panel/RoutingLegendTree.scss
+++ b/src/classic/sass/src/view/panel/RoutingLegendTree.scss
@@ -19,3 +19,7 @@
 .basigx-legend-panel .x-tree-elbow-img {
     width: 0;
 }
+
+.basigx-legend-panel .x-tree-node-text {
+    white-space: normal;
+}
