--- a/src/modern/sass/src/view/panel/MobileMenu.scss
+++ b/src/modern/sass/src/view/panel/MobileMenu.scss
@@ -2,3 +2,28 @@
     width: 16px;
     vertical-align: middle;
 }
+
+#sitepolicy {
+    h1 {
+        font-size: 16px;
+        font-weight:bold;
+        color: black;
+    }
+    h2 {
+        font-weight:bold;
+    }
+}
+
+#imprint {
+    h1 {
+        font-size: 16px;
+        font-weight:bold;
+        color: black;
+    }
+    h2 {
+        font-weight:bold;
+    }
+    h3 {
+        font-weight:bold;
+    }
+}
