changed scss to BfS corporate color / design

--- a/src/classic/sass/src/view/component/Map.scss
+++ b/src/classic/sass/src/view/component/Map.scss
@@ -2,7 +2,7 @@
     position: absolute;
     bottom: 5px;
     left: 220px;
-    background-color: #3892d4;
+    background-color: $base-color ;
     border-radius: 4px;
     height: 22px;
     color: white;
