--- a/src/sass/etc/all.scss
+++ b/src/sass/etc/all.scss
@@ -4,4 +4,6 @@
  $fa-font-path: "../resources/fonts";
 @import "font-awesome/font-awesome.scss";
 
+@import "font-open-sans-condensed/font-open-sans-condensed.scss";
+
 @import "BasiGX.scss";
