--- a/src/modern/sass/src/view/panel/MobileMenu.scss
+++ b/src/modern/sass/src/view/panel/MobileMenu.scss
@@ -3,27 +3,64 @@
     vertical-align: middle;
 }
 
-#sitepolicy {
-    h1 {
-        font-size: 16px;
-        font-weight:bold;
-        color: black;
-    }
-    h2 {
-        font-weight:bold;
-    }
-}
-
 #imprint {
     h1 {
         font-size: 16px;
         font-weight:bold;
         color: black;
+        padding-top: 3px;
     }
     h2 {
         font-weight:bold;
+        padding-top: 3px;
     }
     h3 {
         font-weight:bold;
+        padding-top: 3px;
+    }
+    ul, li {
+        padding: 3px 0px;
+    }
+    p {
+        padding: 3px 0;
+    }
+}
+
+#sitepolicy {
+    h1 {
+        font-size: 16px;
+        font-weight:bold;
+        color: black;
+        line-height: 100% !important;
+        padding-top: 3px;
+    }
+    h2 {
+        font-weight:bold;
+        padding-top: 3px;
+    }
+    ul, li {
+        padding: 3px 0px;
+    }
+    p {
+        padding: 3px 0;
+    }
+}
+
+#dataprotection {
+    h1 {
+        font-size: 16px;
+        font-weight:bold;
+        color: black;
+        padding-top: 3px;
+    }
+    h2 {
+        font-weight:bold;
+        padding-top: 3px;
+    }
+    ul, li {
+        padding: 3px 0px;
+    }
+    p {
+        padding: 3px 0;
     }
 }
