changed title color to base-color

--- a/src/sass/etc/BasiGX.scss
+++ b/src/sass/etc/BasiGX.scss
@@ -17,7 +17,7 @@ div.feature-hover-popup {
     background-color: #fff;
 }
 .k-application-title .x-title-text {
-    color: #457ab0;
+    color: $base-color;
     font-size: 42px;
     font-family: "opensansCondBold",Arial,helvetica,sans-serif;
 }
