at least show partial legend text

--- a/src/classic/sass/src/view/panel/RoutingLegendTree.scss
+++ b/src/classic/sass/src/view/panel/RoutingLegendTree.scss
@@ -25,3 +25,7 @@
     word-break: break-all;
     display: inline-block;
 }
+
+.basigx-legend-panel .x-grid-cell-inner-treecolumn {
+    text-overflow: clip;
+}
