added chart color pickers

--- a/src/classic/sass/src/view/component/D3Chart.scss
+++ b/src/classic/sass/src/view/component/D3Chart.scss
@@ -74,6 +74,7 @@ svg .k-d3-disabled {
 }
 
 svg .k-d3-shape-group-legend .k-d3-delete-icon,
+svg .k-d3-shape-group-legend .k-d3-color-icon,
 svg .k-d3-shape-group-legend .k-d3-download-icon, {
     fill: $button-default-background-color;
     font-size: 17px;
