No more ellipsis break in FF in legend, Fixes #1958

--- a/src/classic/sass/src/view/panel/RoutingLegendTree.scss
+++ b/src/classic/sass/src/view/panel/RoutingLegendTree.scss
@@ -26,6 +26,10 @@
     display: inline-block;
 }
 
+.basigx-legend-panel .x-grid-cell-inner {
+    text-overflow: inherit;
+}
+
 .basigx-legend-panel .x-grid-item-container {
     width: 95% !important;
 }
