Limit height of hover overlay

--- a/src/classic/sass/src/view/main/Main.scss
+++ b/src/classic/sass/src/view/main/Main.scss
@@ -50,3 +50,8 @@
 .ol-attribution.ol-uncollapsible a:active {
     color: #333;
 }
+
+.ol-overlay-container.ol-selectable.k-feature-hover {
+    max-height: 500px;
+    overflow: auto;
+}
