--- a/src/classic/sass/src/view/main/Main.scss
+++ b/src/classic/sass/src/view/main/Main.scss
@@ -55,3 +55,27 @@
     max-height: 500px;
     overflow: auto;
 }
+
+.west-container {
+    .west-top-toolbar {
+        background-color: $base-color;
+        color: white;
+
+        .x-btn{
+            background: none;
+            border: none;
+
+            &.x-btn-focus {
+                border: none;
+            };
+
+            .x-btn-icon-el {
+                color: white;
+            }
+        }
+    }
+
+    .x-k-treemenu {
+        border-top: 3px solid whitesmoke;
+    }
+}
