Add timereferenceValue and some styling

--- a/src/classic/sass/src/view/list/TreeMenu.scss
+++ b/src/classic/sass/src/view/list/TreeMenu.scss
@@ -27,7 +27,18 @@
         cursor: pointer;
         .x-treelist-item-leaf {
             cursor: pointer;
-            background-color: lighten($base-color, 20);
+        }
+        .x-treelist-row-over {
+            background-color: darken($base-color, 10);
+        }
+    }
+
+    .x-treelist-item-selected {
+        >.x-treelist-row {
+            background-color: $base-color;
+            &.x-treelist-row-over {
+                background-color: darken($base-color, 10);
+            }
         }
     }
 
@@ -38,6 +49,9 @@
         .x-treelist-container {
             .x-treelist-row {
                 background-color: lighten($base-color, 20);
+                &:hover {
+                    background-color: darken($base-color, 10);
+                }
             }
         }
     }
@@ -62,6 +76,9 @@
 
     .x-treelist-item-tool {
         width: 64px;
+        &:hover {
+            background-color: darken($base-color, 10);
+        }
     }
 
     .x-treelist-item-text {
