--- a/src/classic/sass/src/view/main/Main.scss
+++ b/src/classic/sass/src/view/main/Main.scss
@@ -56,8 +56,8 @@
     overflow: auto;
 }
 
-.north-container {
-    border-bottom: 1px solid $base-color;
+.south-container {
+    border-top: 1px solid $base-color;
 }
 
 .east-container {
