Hides floating leaf for treemenu menu button

--- a/src/classic/sass/src/view/list/TreeMenu.scss
+++ b/src/classic/sass/src/view/list/TreeMenu.scss
@@ -44,6 +44,9 @@
     }
 
     .x-treelist-item-floated{
+        .menu-button {
+            display: none;
+        }
         .x-treelist-row {
             background-color: $base-color;
         }
