--- a/src/classic/sass/src/view/list/TreeMenu.scss
+++ b/src/classic/sass/src/view/list/TreeMenu.scss
@@ -30,7 +30,7 @@
             cursor: pointer;
         }
         .x-treelist-row-over {
-            background-color: darken($base-color, 10);
+            background-color: darken($base-color, 5);
         }
     }
 
@@ -38,7 +38,16 @@
         >.x-treelist-row {
             background-color: $base-color;
             &.x-treelist-row-over {
-                background-color: darken($base-color, 10);
+                background-color: darken($base-color, 5);
+            }
+        }
+    }
+
+    .x-treelist-item {
+        .x-treelist-row {
+            &.active {
+                background-color: darken($base-color, 5);
+                box-shadow: inset 0 0 10px darken($base-color, 10);
             }
         }
     }
@@ -49,13 +58,21 @@
         }
         .x-treelist-row {
             background-color: $base-color;
+            &.active {
+                background-color: darken($base-color, 5);
+                box-shadow: inset 0 0 10px darken($base-color, 10);
+            }
         }
         .x-treelist-container {
             margin-left: 0;
             .x-treelist-row {
                 background-color: lighten($base-color, 20);
+                &.active {
+                    background-color: darken($base-color, 5);
+                    box-shadow: inset 0 0 10px darken($base-color, 10);
+                }
                 &:hover {
-                    background-color: darken($base-color, 10);
+                    background-color: darken($base-color, 5);
                 }
             }
         }
@@ -82,7 +99,7 @@
     .x-treelist-item-tool {
         width: 64px;
         &:hover {
-            background-color: darken($base-color, 10);
+            background-color: darken($base-color, 5);
         }
     }
 
