Update fontawesome icons to version 4.7.0

--- a/src/classic/sass/src/view/list/TreeMenu.scss
+++ b/src/classic/sass/src/view/list/TreeMenu.scss
@@ -85,6 +85,11 @@
         font-size: 18px;
         color: white;
         line-height: 64px;
+
+        &.fa-map-o,
+        &.fa-map {
+            font-size: 16px;
+        }
     }
 
     .x-treelist-item-tool,
