--- a/src/sass/src/view/component/CartoWindow.scss
+++ b/src/sass/src/view/component/CartoWindow.scss
@@ -1,8 +1,27 @@
-.cartowindow.classic > div.cartowindow-tab > h2,
-.cartowindow.classic > div.cartowindow-tab > input,
-.cartowindow.classic > div.cartowindow-tab > label, {
+@keyframes initialPopupHeader {
+    to {
+        visibility: visible;
+        opacity: 0;
+        transition: visibility 0s 3s, opacity 3s linear;
+    }
+}
+@-webkit-keyframes initialPopupHeader {
+    to {
+        visibility: visible;
+        opacity: 0;
+        transition: visibility 0s 3s, opacity 3s linear;
+    }
+}
+.cartowindow.classic > div.cartowindow-tab > input {
     visibility: hidden;
-    transition: visibility .5s;
+}
+.cartowindow.classic > div.cartowindow-tab > h2,
+.cartowindow.classic > div.cartowindow-tab > label {
+    visibility: hidden;
+    opacity: 1;
+    animation-name: initialPopupHeader;
+    animation-duration: 3s;
+    animation-timing-function: ease-in;
 }
 
 .cartowindow.classic:hover > div.cartowindow-tab > h2,
@@ -22,7 +41,6 @@
 .cartowindow > .closeElement {
     cursor: pointer;
     visibility: hidden;
-    transition: visibility .5s;
     position: absolute;
     height: 2.2em;
     top: -2.2em;
@@ -31,6 +49,10 @@
     color: #fff;
     padding: 0.1em 0.2em;
     width: 2.1em;
+
+    animation-name: initialPopupHeader;
+    animation-duration: 3s;
+    animation-timing-function: ease-in;
 }
 
 .cartowindow:hover > .closeElement {
