introduce shadows to various GUI elements

--- a/src/classic/sass/src/view/panel/RoutingLegendTree.scss
+++ b/src/classic/sass/src/view/panel/RoutingLegendTree.scss
@@ -2,6 +2,9 @@
 .x-window-body .layer-name-suffix {
     display: none;
 }
+.basigx-legend-panel {
+    @include box-shadow(-10px,-15px,10px,0, rgba(0,0,0,0.6));
+}
 /** … except when they are shown inside of the RoutingLegendTree **/
 .basigx-legend-panel .layer-name-suffix {
     color: #666;
