--- a/src/classic/sass/src/view/main/Main.scss
+++ b/src/classic/sass/src/view/main/Main.scss
@@ -1,3 +1,16 @@
+@mixin box-shadow($top, $left, $blur, $size, $color) {
+   -webkit-box-shadow: $top $left $blur $size $color;
+   -moz-box-shadow: $top $left $blur $size $color;
+   box-shadow: $top $left $blur $size $color;
+}
+
+.basigx-panel-menu {
+    @include box-shadow(10px,15px,5px,0, rgba(0,0,0,0.6));
+}
+.x-window {
+    @include box-shadow(10px,15px,5px,0, rgba(0,0,0,0.6));
+}
+
 .x-title-icon-navigation {
     font-family: FontAwesome;
     color: #fff;
