readds duplicates column

--- a/src/classic/sass/src/view/container/styler/GeoStyler.scss
+++ b/src/classic/sass/src/view/container/styler/GeoStyler.scss
@@ -25,3 +25,7 @@
 .rule-generator-window {
     background: white;
 }
+
+.gs-rule-table .ant-table-body .gs-rule-table-numeric-cell {
+    width: 60px;
+}
