adds ant-popover to z-index fix list

--- a/src/classic/sass/src/view/container/styler/GeoStyler.scss
+++ b/src/classic/sass/src/view/container/styler/GeoStyler.scss
@@ -18,7 +18,8 @@
     z-index: 24999;
 }
 
-.ant-menu-submenu.ant-menu-submenu-popup {
+.ant-menu-submenu.ant-menu-submenu-popup,
+.ant-popover {
     z-index: 25000;
 }
 
