Fixes various CSS issues with Firefox

--- a/src/classic/sass/src/view/main/Main.scss
+++ b/src/classic/sass/src/view/main/Main.scss
@@ -4,6 +4,10 @@
    box-shadow: $top $left $blur $size $color;
 }
 
+.k-navigation-button .x-btn-button.x-btn-center {
+    flex: inherit;
+}
+
 .k-panel-themetree {
     @include box-shadow(5px,10px,15px,0, rgba(0,0,0,0.6));
 }
