Fixes button css in Firefox

--- a/src/classic/sass/src/view/main/Main.scss
+++ b/src/classic/sass/src/view/main/Main.scss
@@ -4,7 +4,7 @@
    box-shadow: $top $left $blur $size $color;
 }
 
-.k-navigation-button .x-btn-button.x-btn-center {
+.k-navigation-button .x-btn-button.x-btn-button-center {
     flex: inherit;
 }
 
