Mark filtered column header texts in red

--- a/src/classic/sass/src/view/grid/FilterGrid.scss
+++ b/src/classic/sass/src/view/grid/FilterGrid.scss
@@ -4,3 +4,9 @@
     cursor: pointer;
     background: transparent url(images/grid/hd-pop.png) no-repeat center center;
 }
+
+.k-grid-filter {
+    .x-grid-filters-filtered-column {
+        color: red;
+    }
+}
